<resources>
    <string name="app_name">CricketBattingAverageCalculator</string>
    <string name="score_title_hint">Enter your score.</string>
    <string name="score_title_label">Score</string>
    <string name="out_or_not_label">Out?</string>
    <string name="new_score">New Score</string>
    <string name="show_subtitle">Show Amount of Scores</string>
    <string name="hide_subtitle">Hide Amount of Scores</string>
    <string name="subtitle_format">%1$d scores</string>
    <string name="show_average">Show Total Average</string>
    <string name="score_value">Score Value</string>
    <string name="enter_the_opposition_name">Enter the opposition</string>
    <string name="opposition_name">Opposition Name</string>
    <string name="show_average_menu_of_list">Show Average</string>
    <string name="show_oppositions">Show Oppositions</string>
    <string name="show_average_by_opposition">Show Average By Opposition</string>
    <string name="clear_list">Clear List</string>
    <string name="confirm_score">Confirm Score</string>
    <string name="delete_score">Delete Score</string>
    <string name="balls_faced">Balls Faced</string>
    <string name="enter_balls_faced">Enter balls faced</string>
    <string name="opposition">Opposition</string>
    <string name="show_total_strike_rate">Show Total Strike Rate</string>
    <string name="show_strike_rate">Show Strike Rate</string>
    <string name="show_strike_rate_by_opposition">Show Strike Rate by Opposition</string>
</resources>