<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score_title_label"/>
    <EditText
        android:id="@+id/score_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:autofillHints="0"
        android:hint="@string/score_title_hint"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/balls_faced"/>
    <EditText
        android:id="@+id/balls_faced_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:autofillHints="0"
        android:hint="@string/enter_balls_faced"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opposition"/>
    <EditText
        android:id="@+id/opposition_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_opposition_name"/>
    <CheckBox
        android:id="@+id/out_or_not_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/out_or_not_label"/>

    <Button
        android:id="@+id/ConfirmScoreButton"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/confirm_score"></Button>

    <Button
        android:id="@+id/DeleteScoreButton"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/delete_score"></Button>

</LinearLayout>