<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/new_score"
        android:title="@string/new_score"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/show_average"
        android:title="@string/show_average_menu_of_list"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/show_strike_rate"
        android:title="Show Strike Rate"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/show_subtitle"
        android:title="@string/show_subtitle"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/show_oppositions"
        android:title="@string/show_oppositions"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/show_average_by_opposition"
        android:title="@string/show_average_by_opposition"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/show_strike_rate_by_opposition"
        android:title="Show Strike Rate by Opposition"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/clear_list"
        android:title="@string/clear_list"
        app:showAsAction="ifRoom"/>

</menu>